[gd_scene load_steps=8 format=3 uid="uid://m3wen6p8le4o"]

[ext_resource type="Script" path="res://Hero/chose_hero.gd" id="1_ju1fo"]
[ext_resource type="Texture2D" uid="uid://d2mtye5ygvua5" path="res://Assets/Backgrounds/yggdrasil/yggdrasil.png" id="2_g4581"]
[ext_resource type="Texture2D" uid="uid://c4q0stwu6wpm4" path="res://Assets/GUI/chose_hero_board.png" id="2_y7cni"]
[ext_resource type="Texture2D" uid="uid://c857kw4yxq376" path="res://Assets/GUI/heart.png" id="4_ern71"]
[ext_resource type="Texture2D" uid="uid://csmohqvdxy4k" path="res://Assets/GUI/rune_blue.png" id="5_f2031"]
[ext_resource type="FontFile" uid="uid://dpho5l81s6o3y" path="res://Assets/Fonts/Comfortaa-Bold.ttf" id="5_m4r54"]
[ext_resource type="Texture2D" uid="uid://0dakyfy5c6i2" path="res://Assets/GUI/select_button.png" id="7_n25wg"]

[node name="ChoseHero" type="Node2D"]
script = ExtResource("1_ju1fo")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(0, -359)
scale = Vector2(1.00052, 0.808854)
texture = ExtResource("2_g4581")
centered = false

[node name="Board_1" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_y7cni")

[node name="HeroSlot1" type="Node2D" parent="Board_1"]

[node name="Heart" type="TextureRect" parent="Board_1/HeroSlot1"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_ern71")

[node name="HeartNumber" type="RichTextLabel" parent="Board_1/HeroSlot1"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_fonts/normal_font = ExtResource("5_m4r54")
theme_override_fonts/bold_font = ExtResource("5_m4r54")
text = "example"

[node name="Rune" type="TextureRect" parent="Board_1/HeroSlot1"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_f2031")

[node name="RuneNumber" type="RichTextLabel" parent="Board_1/HeroSlot1"]
offset_right = 100.0
offset_bottom = 100.0
theme_override_fonts/normal_font = ExtResource("5_m4r54")
theme_override_fonts/bold_font = ExtResource("5_m4r54")
text = "example"

[node name="Button1" type="TextureButton" parent="Board_1/HeroSlot1"]
offset_right = 356.0
offset_bottom = 200.0
texture_normal = ExtResource("7_n25wg")

[node name="RichTextLabel" type="RichTextLabel" parent="Board_1/HeroSlot1/Button1"]
layout_mode = 0
offset_left = 11.0
offset_top = 2.0
offset_right = 81.0
offset_bottom = 32.0
text = "SELECT"

[node name="Board_2" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_y7cni")

[node name="HeroSlot2" type="Node2D" parent="Board_2"]

[node name="Heart" type="TextureRect" parent="Board_2/HeroSlot2"]
offset_right = 467.0
offset_bottom = 427.0
texture = ExtResource("4_ern71")

[node name="HeartNumber" type="RichTextLabel" parent="Board_2/HeroSlot2"]
offset_right = 40.0
offset_bottom = 40.0
text = "example"

[node name="Rune" type="TextureRect" parent="Board_2/HeroSlot2"]
offset_right = 250.0
offset_bottom = 250.0
texture = ExtResource("5_f2031")

[node name="RuneNumber" type="RichTextLabel" parent="Board_2/HeroSlot2"]
offset_right = 100.0
offset_bottom = 100.0
theme_override_fonts/normal_font = ExtResource("5_m4r54")
theme_override_fonts/bold_font = ExtResource("5_m4r54")
text = "example"

[node name="Button2" type="TextureButton" parent="Board_2/HeroSlot2"]
offset_right = 70.0
offset_bottom = 30.0
texture_normal = ExtResource("7_n25wg")

[node name="RichTextLabel" type="RichTextLabel" parent="Board_2/HeroSlot2/Button2"]
layout_mode = 0
offset_left = 11.0
offset_top = 2.0
offset_right = 81.0
offset_bottom = 32.0
text = "SELECT"

[node name="Board_3" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_y7cni")

[node name="HeroSlot3" type="Node2D" parent="Board_3"]

[node name="Heart" type="TextureRect" parent="Board_3/HeroSlot3"]
offset_right = 467.0
offset_bottom = 427.0
texture = ExtResource("4_ern71")

[node name="HeartNumber" type="RichTextLabel" parent="Board_3/HeroSlot3"]
offset_right = 40.0
offset_bottom = 40.0
text = "example"

[node name="Rune" type="TextureRect" parent="Board_3/HeroSlot3"]
offset_right = 250.0
offset_bottom = 250.0
texture = ExtResource("5_f2031")

[node name="RuneNumber" type="RichTextLabel" parent="Board_3/HeroSlot3"]
offset_right = 100.0
offset_bottom = 100.0
theme_override_fonts/normal_font = ExtResource("5_m4r54")
theme_override_fonts/bold_font = ExtResource("5_m4r54")
text = "example"

[node name="Button3" type="TextureButton" parent="Board_3/HeroSlot3"]
offset_right = 70.0
offset_bottom = 30.0
texture_normal = ExtResource("7_n25wg")

[node name="RichTextLabel" type="RichTextLabel" parent="Board_3/HeroSlot3/Button3"]
layout_mode = 0
offset_left = 11.0
offset_top = 2.0
offset_right = 81.0
offset_bottom = 32.0
text = "SELECT"

[connection signal="pressed" from="Board_1/HeroSlot1/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Board_2/HeroSlot2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Board_3/HeroSlot3/Button3" to="." method="_on_button_3_pressed"]
